[gd_scene load_steps=9 format=3 uid="uid://b5p4a4ef147qa"]

[ext_resource type="Script" path="res://objects/Extender/Extender.gd" id="1_5w4s7"]
[ext_resource type="Shader" path="res://assets/Outline.gdshader" id="2_kry5h"]
[ext_resource type="PackedScene" uid="uid://bds0d08hg7ipj" path="res://objects/Sensor/Sensor.tscn" id="3_7vwlw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_os36j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjbs8"]
render_priority = 0
shader = ExtResource("2_kry5h")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fx6m6"]
next_pass = SubResource("ShaderMaterial_bjbs8")
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.619434, 0.794691, 0.869058, 1)
roughness = 0.02

[sub_resource type="BoxMesh" id="BoxMesh_egucu"]
material = SubResource("StandardMaterial3D_fx6m6")
size = Vector3(3, 1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pry5f"]
size = Vector3(3, 1, 5)

[node name="Extender" type="AnimatableBody3D"]
transform = Transform3D(1, -0.000189519, 0.000144141, 0.000189527, 1, -5.48545e-05, -0.00014413, 5.48818e-05, 1, 0, 0, 0)
physics_material_override = SubResource("PhysicsMaterial_os36j")
script = ExtResource("1_5w4s7")

[node name="ExtenderMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_egucu")

[node name="Sensor" parent="." instance=ExtResource("3_7vwlw")]
transform = Transform3D(0.983584, 0.000186419, -0.000141759, -0.000186408, 0.983584, 5.39943e-05, 0.000141775, -5.3954e-05, 0.983584, -0.000374357, 1.02478, -0.999892)
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -3.74127e-11, 0, -4.15549e-09, 1, -7.27596e-12, 4.16185e-09, -1.03319e-09, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_pry5f")

[connection signal="sensor_activate" from="Sensor" to="." method="_on_sensor_activate"]
[connection signal="sensor_deactivate" from="Sensor" to="." method="_on_sensor_deactivate"]
